--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header">
       <div class="container">
         <div class="header">
-          <h1>Skateboard</h1>
+          <h1>I'M HEADER</h1>
           <div class="header-center">
             <ion-icon name="search-outline"></ion-icon>
             <input type="text" placeholder="Search" />
